# smiles_blocks

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
hpc_scripts/: computecanada_narval_dask_calibration_range.sh  computecanada_narval_reformat_smiles_data.sh  computecanada_narval_repackage_calibration_results.sh  computecanada_narval_smiles2block.sh  computecanada_narval_test_package_install.sh
jobs_scripts/: dask_calibration_range.py  reformat_smiles_data.py  repackage_calibration_results.py  smiles2block.py  smiles_generation_modelling.py
notebooks/: 1-er-check_job_completion.ipynb  2-er-visualize_modeling_results.ipynb  3-er-smiles2block_custom.ipynb  4-er-make_canonical_control.ipynb  5-er-smiles_fragmentation_results_analysis.ipynb  6-er-test_mcts.ipynb  6a-er-mcts_sampling_benchmark.ipynb  7-er-preparing_data_molgpt.ipynb
reports/modeling_results/: modeling_function_R2_stats.csv  modeling_function_alpha_stats.csv  modeling_function_beta_stats.csv
smiles_blocks/: __init__.py  baseparams.py  dataset.py  features.py  files.py  mcts.py  modelling.py  plots.py  range_calibration.py  rbrics_patterns.py  retrosynthesis.py  smiles_fragmentation.py  utils.py
smiles_blocks/modeling/: predict.py  train.py
tests/: test_dataset.py  test_mcts.py  test_modelling.py  test_range_calibration.py  test_rbrics_patterns.py  test_retrosynthesis.py  test_smiles_fragmentation.py  test_utils.py
