[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smiles_blocks"
version = "0.0.1"
description = "SMILES fragments that can be concatenated into a valid molecule"
authors = [
  { name = "etienne_reboul" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "mkdocs",
    "pip",
    "pytest",
    "ruff",
    "dask",
    "rdkit",
    "numpy",
    "scipy",
    "scikit-learn",
    "numba",

]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["smiles_blocks"]
include = ["pyproject.toml", "smiles_blocks/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["smiles_blocks"]
force-sort-within-sections = true

